# alma-notes-import-flask

./: .env.template  .gitignore  Dockerfile  README.md  app.py  batch.py  config.py  docker-compose.yml  emailreport.py  forms.py  models.py  pyproject.toml  requirements.txt  settings.template.py  template.env
.github/: dependabot.yml
.github/workflows/: dependabot-import-test.yml
app/: __init__.py
app/forms/: institutionform.py  uploadform.py  userform.py
app/log/: app.log.2023-12-18  app.log.2024-01-03
app/models/: batchimport.py  institution.py  user.py
app/static/css/: style.css
app/static/csv/: README.md  test.csv
app/tasks/: batch.py
app/templates/: base.html  edit_institution.html  edit_user.html  institutions.html  upload.html  users.html
app/upload/: routes.py
etc/nginx/sites-available/: almanotesimport
etc/systemd/system/: almanotesimport-celery.service  almanotesimport.service
log/: README.md
static/css/: style.css
templates/: add_institution.html  base.html  edit_institution.html  edit_user.html  institutions.html  login.html  upload.html  users.html
