[tool.poetry]
name = "alma-notes-import-flask"
version = "0.1.0"
description = "Flask app for batch updating fields in Alma item records by barcode from a CSV file"
authors = ["WRLC"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
amqp = "^5.2.0"
async-timeout = "^5.0.0"
billiard = "^4.2.1"
blinker = "^1.8.2"
celery = "^5.4.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
chardet = "^5.2.0"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
click-didyoumean = "^0.3.1"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
cryptography = "^44.0.0"
flask = "^3.0.3"
flask-celeryext = "^0.5.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"
idna = "^3.10"
importlib-metadata = "^8.5.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
kombu = "^5.4.2"
markupsafe = "^3.0.2"
packaging = "^24.1"
prompt-toolkit = "^3.0.48"
pycparser = "^2.22"
pyjwt = "^2.9.0"
pymemcache = "^4.0.0"
pymysql = "^1.1.1"
pyopenssl = "^24.2.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
requests = "^2.32.3"
six = "^1.16.0"
sqlalchemy = "^2.0.36"
typing-extensions = "^4.12.2"
tzdata = "^2024.2"
urllib3 = "^2.2.3"
vine = "^5.1.0"
wcwidth = "^0.2.13"
werkzeug = "^3.1.2"
wtforms = "^3.2.1"
zipp = "^3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
