[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
amqp = "^5.2.0"
async-timeout = "^5.0.0"
billiard = "^4.2.2"
blinker = "^1.8.2"
celery = "^5.4.0"
certifi = "^2025.10.5"
cffi = "^2.0.0"
chardet = "^5.2.0"
charset-normalizer = "^3.4.4"
click = "^8.3.0"
click-didyoumean = "^0.3.1"
click-plugins = "^1.1.1"
click-repl = "^0.3.0"
cryptography = "^46.0.3"
flask = "^3.1.2"
flask-celeryext = "^0.5.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
greenlet = "^3.2.4"
gunicorn = "^23.0.0"
idna = "^3.11"
importlib-metadata = "^8.5.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
kombu = "^5.4.2"
markupsafe = "^3.0.3"
packaging = "^25.0"
prompt-toolkit = "^3.0.52"
pycparser = "^2.23"
pyjwt = "^2.9.0"
pymemcache = "^4.0.0"
pymysql = "^1.1.2"
pyopenssl = "^25.3.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.2.1"
redis = "^6.4.0"
requests = "^2.32.5"
six = "^1.16.0"
sqlalchemy = "^2.0.44"
typing-extensions = "^4.15.0"
tzdata = "^2025.1"
urllib3 = "^2.2.3"
vine = "^5.1.0"
wcwidth = "^0.2.14"
werkzeug = "^3.1.2"
wtforms = "^3.2.1"
zipp = "^3.20.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
